Fix browse button overlapping logo (Fixes #505)

--- a/grails-app/assets/stylesheets/_main.scss
+++ b/grails-app/assets/stylesheets/_main.scss
@@ -36,7 +36,6 @@ h1,h2,h3,h4,h5,h6{
   position: relative;
   margin: 0 auto;
   display: block;
-  width: 95px;
 
   img{
     max-width: 130px;
